src/gae/nohup.out
  File "enron-rn-1-11.txt", line 1
    WARNING:tensorflow:From /network/rit/home/aa465948/venv/lib/python2.7/site-packages/tensorflow/python/ops/sparse_ops.py:1165: sparse_to_dense (from tensorflow.python.ops.sparse_ops) is deprecated and will be removed in a future version.
           ^
SyntaxError: invalid syntax
